[Feature]: Static and generated models (#1156)
Needs some work and explicit id generation for generator resources